--- a/challenge_06/Team_B/BootCamp/build.gradle
+++ b/challenge_06/Team_B/BootCamp/build.gradle
@@ -19,4 +19,12 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
+    dependencies {
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    }
+
+    test {
+        useJUnitPlatform()
+    }
+
 }
